--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
     "@testing-library/user-event": "^13.2.1",
     "axios": "^1.8.2",
     "bootstrap": "^5.3.3",
+    "build": "^0.1.4",
+    "chart.js": "^4.4.8",
     "cra-template": "1.2.0",
     "http-proxy-middleware": "^3.0.3",
-    "chart.js": "^4.4.8",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.9",
     "react-chartjs-2": "^5.3.0",
